--- a/flower.html
+++ b/flower.html
@@ -315,7 +315,7 @@
     <div id="rose-petals-fall-container"></div>
     
     <div class="scene-container">
-        <div style="border: 0px solid black; text-align: center; font-size: 1.3rem; font-weight: 500; position: absolute; width: 15rem; top: 8rem;">Un ramo de flores virtuales para la flor más hermosa. Feliz día Ari 🩵</div>
+        <div style="border: 0px solid black; text-align: center; font-size: 1.3rem; font-weight: 500; position: absolute; width: 15rem; top: 8rem;">Un ramo de flores virtuales para la princesa más hermosa. Feliz día Ari 🩵</div>
         <div class="text"></div>
         <div class="rose" style="top: 25rem; z-index: 250;">
             <div class="petals petals">
