--- a/flower.html
+++ b/flower.html
@@ -315,7 +315,7 @@
     <div id="rose-petals-fall-container"></div>
     
     <div class="scene-container">
-        <div style="border: 0px solid black; text-align: center; font-size: 1.3rem; font-weight: 800; position: absolute; width: 17rem; top: 8rem;">Quería darle unas flores virtuales a la princesa más hermosa. Espero mucho el día de regalarte unas reales. Feliz día Ari 🩵</div>
+        <div style="border: 0px solid black; text-align: center; font-size: 1.3rem; font-weight: 800; position: absolute; width: 17rem; top: 8rem;">Quería darle unas flores virtuales a la princesa más hermosa. Espero mucho el día de regalarte unas reales. Feliz día Ari, gracias por dejarme conocerte poco a poquito 🩵</div>
         <div class="text"></div>
         <div class="rose" style="top: 30rem; z-index: 250;">
             <div class="petals petals">
