--- a/flower.html
+++ b/flower.html
@@ -315,7 +315,7 @@
     <div id="rose-petals-fall-container"></div>
     
     <div class="scene-container">
-        <div style="border: 0px solid black; text-align: center; font-size: 1.3rem; font-weight: 800; position: absolute; width: 17rem; top: 8rem;">Quiero darte estas flores virtuales porque mereces te mereces todo, incluso flores reales, y espero poder darte unas pronto. Feliz día, Ari. Gracias por dejarme conocerte poco a poco 🩵</div>
+        <div style="border: 0px solid black; text-align: center; font-size: 1.3rem; font-weight: 800; position: absolute; width: 17rem; top: 8rem;">Quiero darte estas flores virtuales porque mereces todo, incluso flores reales, y espero poder entregarte unas pronto. Feliz día, Ari. Gracias por dejarme conocerte poco a poco 🩵</div>
         <div class="text"></div>
         <div class="rose" style="top: 30rem; z-index: 250;">
             <div class="petals petals">
