--- a/flower.html
+++ b/flower.html
@@ -17,6 +17,10 @@
             box-sizing: border-box;
         }
 
+        html {
+            background: #fbb3ff;
+        }
+
         body {
             height: 100vh;
             width: 100vw;
